--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 <div class="hero-text" data-aos="fade-right" data-aos-duration="1000">
                     <h1>Learn How to Start Earning Through Forex – No Experience Needed</h1>
                     <p class="subheading">Master the basics of Forex trading, connect with trusted brokers, and begin building your trading strategy.</p>
-                    <a href="#get-started" class="btn pulse">Get Started Now <i class="fas fa-arrow-right"></i></a>
+                    <a href="#get-started" class="btn pulse">Get Your FREE PDF Guide Now <i class="fas fa-file-pdf"></i></a>
                 </div>
             </div>
         </div>
@@ -766,6 +766,10 @@
                     <h2>What Is Forex Trading?</h2>
                     <p>Forex trading involves buying and selling currencies in a global marketplace with the aim of making a profit. It's the largest financial market in the world, open 24 hours a day, 5 days a week.</p>
                     <p>Whether you're a beginner or experienced, you can participate by using leverage to trade currencies, commodities, and other assets. Learning the ins and outs of Forex trading can lead to substantial profits, but it requires knowledge, strategy, and discipline.</p>
+                    <div style="margin-top: 20px; padding: 15px; background-color: #f7f9ff; border-left: 4px solid var(--primary); border-radius: 4px;">
+                        <h4 style="margin-top: 0;"><i class="fas fa-file-pdf"></i> FREE PDF Guide Available</h4>
+                        <p style="margin-bottom: 0;">Download our comprehensive "Forex Trading for Beginners" PDF guide that walks you through everything you need to know to get started. No email required!</p>
+                    </div>
                 </div>
                 <div class="col" style="flex: 1; min-width: 300px;" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
                     <img src="image-2.jpeg" alt="Forex trading explanation" style="width: 100%; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
@@ -872,8 +876,8 @@
                     <p>Forex trading gives you access to a global market. Trade 24/7 and explore opportunities across different time zones and currency pairs from around the world.</p>
                 </div>
                 <div class="card">
-                    <h3>Earn from Referrals</h3>
-                    <p>Share your referral link with others and earn commissions from their trades. The more active traders you refer, the more you earn!</p>
+                    <h3>Comprehensive Free PDF Guide</h3>
+                    <p>Get instant access to our detailed Forex trading guide in PDF format. Learn strategies, risk management, and technical analysis at your own pace, completely free!</p>
                 </div>
             </div>
         </div>
@@ -884,20 +888,20 @@
             <h2>How It Works</h2>
             <div class="steps">
                 <div class="step">
-                    <h3>Step 1: Register with Us</h3>
-                    <p>Sign up and get access to our Forex trading platform. After registering, you’ll receive a referral link and exclusive access to Forex brokers.</p>
+                    <h3>Step 1: Download Your Free PDF Guide</h3>
+                    <p>Get instant access to our comprehensive Forex trading guide that covers everything from basic concepts to advanced strategies. No registration required!</p>
                 </div>
                 <div class="step">
                     <h3>Step 2: Start Trading</h3>
-                    <p>Begin your trading journey using your preferred strategy and trading pair. Whether you’re a beginner or experienced, we provide the tools to help you succeed.</p>
+                    <p>Begin your trading journey using your preferred strategy and trading pair. Whether you're a beginner or experienced, our PDF guide provides the tools to help you succeed.</p>
                 </div>
                 <div class="step">
-                    <h3>Step 3: Share Your Link</h3>
-                    <p>Share your referral link with friends, family, or followers. Every time someone you refer starts trading, you earn commissions based on their trading volume.</p>
+                    <h3>Step 3: Share With Friends</h3>
+                    <p>Share the free PDF guide with friends, family, or followers. Help others learn about the potential of Forex trading with our easy-to-understand resource.</p>
                 </div>
                 <div class="step">
                     <h3>Step 4: Earn & Withdraw</h3>
-                    <p>As your referrals trade, you accumulate earnings. Withdraw your profits easily and use them to scale your trading or invest in other opportunities.</p>
+                    <p>As you apply the strategies from our guide, you can accumulate earnings. Withdraw your profits easily and use them to scale your trading or invest in other opportunities.</p>
                 </div>
             </div>
         </div>
@@ -906,8 +910,8 @@
     <section id="cta" class="section cta">
         <div class="container">
             <h2>Ready to Start Earning?</h2>
-            <p>Join thousands of successful traders. Start your Forex journey today, refer others, and begin earning. The Forex market is open, and the opportunity is waiting.</p>
-            <a href="#get-started" class="cta-button">Get Started</a>
+            <p>Join thousands of successful traders. Download our FREE Forex trading PDF guide today and begin your journey. The Forex market is open, and the opportunity is waiting.</p>
+            <a href="https://locked4.com/cl/i/2ljj96" class="btn">Get Your FREE PDF Guide</a>
         </div>
     </section>
 
@@ -916,17 +920,17 @@
             <h2>What Our Traders Say</h2>
             <div class="testimonial-slider">
                 <div class="testimonial">
-                    <p>"I started with little experience, but with the help of this platform, I’m now earning regularly from Forex trading. The referral program has been an amazing boost!"</p>
+                    <p>"The free PDF guide was a game-changer for me. I had no experience in Forex, but the step-by-step instructions made everything clear. I'm now earning regularly thanks to what I learned!"</p>
                     <h4>John D.</h4>
                     <p>Forex Trader</p>
                 </div>
                 <div class="testimonial">
-                    <p>"The process was simple, and the commissions are real! I referred a few friends, and my earnings have been increasing steadily every month."</p>
+                    <p>"I've read many Forex guides, but this free PDF is by far the most comprehensive. The risk management section alone was worth its weight in gold. I've shared it with all my friends!"</p>
                     <h4>Sarah K.</h4>
-                    <p>Forex Trader & Affiliate</p>
+                    <p>Forex Trader & Educator</p>
                 </div>
                 <div class="testimonial">
-                    <p>"I was skeptical at first, but after a few weeks of trading, I’ve seen great results. It’s a game-changer in my financial strategy!"</p>
+                    <p>"I was skeptical about a free PDF offering real value, but I was blown away by the quality of information. The technical analysis section helped me develop a strategy that's yielding great results!"</p>
                     <h4>Michael T.</h4>
                     <p>Forex Trader</p>
                 </div>
